--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ xcuserdata/
 *.xcscmblueprint
 *.xccheckout
 
+*.md
+*.png
+*.xcworkspace
+
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
